src/objects/loan_ffa__FFA_Journal_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>loan_ffa__Batch_Notification_Email__c</fullName>
        <label>Batch Notification Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Generate_Daily_Interest_Accrual_Journal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Generate Daily Interest Accrual Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Generate_Dishonor_Fee_Journal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Dishonor Fee Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Generate_Dishonor_Fee_Reversal_Journal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Dishonor Fee Reversal Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Generate_Fee_Payment_Journal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Generate Fee Pmt Journal (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Generate_Late_Fee_Journal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Generate Late Fee Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Generate_Late_Fee_Reversal_Journal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the Late Fee Reversal Journal is to be created</inlineHelpText>
        <label>Generate Late Fee Reversal Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Generate_Loan_Funding_Journal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Generate Loan Funding Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Generate_Loan_Repayment_Journal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Generate Loan Repayment Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Generate_Loan_Repayment_Reversal_Journal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Generate Loan Repayment Reversal Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Generate_Orig_Fee_Journal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Orig Fee Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Generate_OriginationFee_Reversal_Journal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked, if Origination Fee Reversal Journal is to be created.</inlineHelpText>
        <label>Generate OriginationFee Reversal Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Generate_ServiceFeeReversal_Journal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate ServiceFeeReversal Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Generate_Service_Fee_Journal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Service Fee Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Generate_TaxReversal_Journal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate TaxReversal Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Generate_Tax_Journal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Tax Journal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Loan_Funding_Journal_Creation_Batch_Size__c</fullName>
        <description>Batch size for Loan Funding Journal Creation Job.</description>
        <inlineHelpText>Batch size for Loan Funding Journal Creation Job.</inlineHelpText>
        <label>Loan Funding Journal Creation Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Loan_Payment_Journal_Creation_Batch_Size__c</fullName>
        <description>Batch size for Loan Payment Journal Creation Job batch.</description>
        <inlineHelpText>Batch size for Loan Payment Journal Creation Job batch.</inlineHelpText>
        <label>Loan Payment Journal Creation Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan_ffa__Payment_Reversal_Journal_Creation_Size__c</fullName>
        <description>Batch size for Payment Reversal Journal Creation Job.</description>
        <inlineHelpText>Batch size for Payment Reversal Journal Creation Job.</inlineHelpText>
        <label>Payment Reversal Journal Creation Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FFA Journal Generation Settings</label>
</CustomObject>